fixed alignment of gamelist and added style to finalsolution

--- a/client/src/styles/Game.css
+++ b/client/src/styles/Game.css
@@ -47,7 +47,7 @@ body {
     width: 50%;
     padding: 15px;
     text-align: center;
-    
+    padding-left: 73px;
 }
 
 #wave-container {
